--- a/api/qsharp/microsoft.quantum.arrays.sequencei.yml
+++ b/api/qsharp/microsoft.quantum.arrays.sequencei.yml
@@ -28,20 +28,20 @@ input:
     isPrimitive: true
     uid: Int
   - name: to
-    summary: 间隔不小于 `from`的非独占结束索引。
+    summary: 不小于的间隔的非独占结束索引`from`。
     isPrimitive: true
     uid: Int
 output:
   content: Int[]
   types:
-  - summary: 一个数组，其中包含数字序列 `from`、`from + 1`、... `to`。
+  - summary: 一个包含数字`from`序列的数组， `from + 1`，...，。 `to`
     isArray: true
     isPrimitive: true
     uid: Int
 metadata:
-  ms.openlocfilehash: 7ff3ee1eaabb17fbc4e3736d993a8cc5ac1ccaf1
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 0efe1b4c3980c808cd89e56fd4948e06218cab66
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73214225"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82680835"
