--- a/api/qsharp/microsoft.quantum.arrays.sequencei.yml
+++ b/api/qsharp/microsoft.quantum.arrays.sequencei.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.arrays.sequencei
 name: SequenceI
 type: function
-namespace: Microsoft.Quantum.Arrays
+namespace: microsoft.quantum.arrays
 summary: 获取给定时间间隔内的整数数组。
 examples: >-
   ```qsharp
@@ -28,20 +28,20 @@ input:
     isPrimitive: true
     uid: Int
   - name: to
-    summary: 不小于的间隔的非独占结束索引`from`。
+    summary: 不小于的间隔的非独占结束索引 `from` 。
     isPrimitive: true
     uid: Int
 output:
   content: Int[]
   types:
-  - summary: 一个包含数字`from`序列的数组， `from + 1`，...，。 `to`
+  - summary: 一个包含数字序列的数组， `from` `from + 1` ，...， `to` 。
     isArray: true
     isPrimitive: true
     uid: Int
 metadata:
-  ms.openlocfilehash: 0efe1b4c3980c808cd89e56fd4948e06218cab66
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 079ea7c2082f541c89bfee1f7edd8bc2ed670751
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82680835"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89351673"
