--- a/api/qsharp/microsoft.quantum.arrays.sequencel.yml
+++ b/api/qsharp/microsoft.quantum.arrays.sequencel.yml
@@ -2,9 +2,9 @@
 uid: microsoft.quantum.arrays.sequencel
 name: SequenceL
 type: function
-namespace: Microsoft.Quantum.Arrays
+namespace: microsoft.quantum.arrays
 summary: 获取给定时间间隔内的整数数组。
-remarks: 与`from` `to`之间的差异必须符合某个`Int`值。
+remarks: 与之间的 `from` 差异 `to` 必须符合某个 `Int` 值。
 examples: >-
   ```qsharp
 
@@ -24,20 +24,20 @@ input:
     isPrimitive: true
     uid: BigInt
   - name: to
-    summary: 不小于的间隔的非独占结束索引`from`。
+    summary: 不小于的间隔的非独占结束索引 `from` 。
     isPrimitive: true
     uid: BigInt
 output:
   content: BigInt[]
   types:
-  - summary: 一个包含数字`from`序列的数组， `from + 1`，...，。 `to`
+  - summary: 一个包含数字序列的数组， `from` `from + 1` ，...， `to` 。
     isArray: true
     isPrimitive: true
     uid: BigInt
 metadata:
-  ms.openlocfilehash: 7271856286009cfd1651f19f69f932e79d79c2bf
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: c39259d5c39ff523464b1defc3c29c7dca6551ee
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82680815"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89351656"
